# polylith-uv-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  workspace.toml
